src/parser.output
Terminale, die in Grammatik unbenutzt sind

   "=>"


Zustand 33 Konflikte: 1 Schiebe/Reduziere
Zustand 51 Konflikte: 1 Schiebe/Reduziere
Zustand 59 Konflikte: 1 Schiebe/Reduziere
Zustand 62 Konflikte: 1 Schiebe/Reduziere
Zustand 84 Konflikte: 1 Schiebe/Reduziere
Zustand 100 Konflikte: 2 Schiebe/Reduziere
Zustand 265 Konflikte: 1 Schiebe/Reduziere
Zustand 266 Konflikte: 1 Schiebe/Reduziere
Zustand 357 Konflikte: 1 Schiebe/Reduziere
Zustand 379 Konflikte: 1 Schiebe/Reduziere
Zustand 390 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: start $end

    1 start: %empty
    2      | filestmnts

    3 using: using_low
    4      | using_low "=" IDENT

    5 using_low: "using" "namespace" type ";"
    6          | "using" "enum" type ";"
    7          | "using" "class" type ";"

    8 filestmnt: class
    9          | namespace
   10          | mthd
   11          | using
   12          | enum

   13 filestmnts: filestmnt
   14           | filestmnts filestmnt

   15 classstmnt: mthd
   16           | mthdop
   17           | mthdcnst
   18           | class
   19           | prop
   20           | using
   21           | enum

   22 classstmnts: classstmnt
   23            | classstmnts classstmnt

   24 codestmnt: ifelse
   25          | using
   26          | for
   27          | trycatch
   28          | while
   29          | switch
   30          | statement ";"
   31          | scope
   32          | val ";"
   33          | ";"
   34          | error

   35 codestmnts: codestmnt
   36           | codestmnts codestmnt

   37 type_ident: IDENT
   38           | type_ident "::" IDENT

   39 type: type_ident template_use
   40     | "::" type_ident
   41     | "::" type_ident template_use
   42     | type_ident

   43 typelist: type
   44         | type ","
   45         | typelist "," type

   46 encpsltn: encpsltn_n_cls
   47         | "derived"
   48         | "private"

   49 encpsltn_n_cls: "public"
   50               | "local"

   51 template_def: type IDENT
   52             | type IDENT "=" cval

   53 template_defs: template_def
   54              | template_def ","
   55              | template_defs "," template_def

   56 template_use: "<" typelist ">"

   57 template: "<" template_defs ">"

   58 namespace: "namespace" type_ident "{" filestmnt "}"

   59 enum: encpsltn_n_cls "enum" enum_body
   60     | encpsltn_n_cls "enum" ":" type enum_body

   61 enum_body: "{" "}"
   62          | "{" enum_values "}"

   63 enum_values: enum_value
   64            | enum_value ","
   65            | enum_value ";"
   66            | enum_values "," enum_value
   67            | enum_values ";" enum_value

   68 enum_value: IDENT
   69           | IDENT "=" cval

   70 class: classhead classbody
   71      | classhead ":" typelist classbody
   72      | classhead template classbody
   73      | classhead template ":" typelist classbody

   74 classhead: encpsltn "class" IDENT

   75 classbody: "{" classstmnts "}"

   76 mthd: mthd_head mthd_args mthd_body
   77     | mthd_head template mthd_args mthd_body

   78 mthd_head: encpsltn type IDENT
   79          | "unbound" encpsltn type IDENT

   80 mthd_args: "(" ")"
   81          | "(" mthd_arglist ")"

   82 mthd_body: "{" "}"
   83          | "{" codestmnts "}"

   84 mthd_arglist: mthd_arg
   85             | mthd_arg ","
   86             | mthd_arglist "," mthd_arg

   87 mthd_arg: type IDENT
   88         | type IDENT "=" cval

   89 mthdop: mthdop_head mthdop_args mthd_body
   90       | mthdop_head template mthdop_args mthd_body

   91 mthdop_head: "unbound" encpsltn type

   92 mthdop_args: "operator" mthdop_ops1s "(" mthd_arg ")"
   93            | mthdop_ops1p "operator" "(" mthd_arg ")"
   94            | mthdop_ops1s "operator" "(" mthd_arg ")"
   95            | "operator" mthdop_ops2 "(" mthd_arg "," mthd_arg ")"

   96 mthdop_ops1p: "!"
   97             | "~"
   98             | "-"
   99             | "+"

  100 mthdop_ops1s: "++"
  101             | "--"

  102 mthdop_ops2: "+"
  103            | "-"
  104            | "*"
  105            | "/"
  106            | ">"
  107            | ">="
  108            | ">>"
  109            | ">>>"
  110            | "<"
  111            | "<="
  112            | "<<"
  113            | "<<<"
  114            | "!="
  115            | "=="
  116            | ".."
  117            | "&"
  118            | "&&"
  119            | "|"
  120            | "||"
  121            | "^"
  122            | "%"

  123 mthdcnst: mthdcnst_head mthd_args mthd_body

  124 mthdcnst_head: encpsltn IDENT
  125              | "~" IDENT

  126 prop: prop_head prop_body

  127 prop_head: encpsltn type IDENT
  128          | "unbound" encpsltn type IDENT

  129 prop_body: "{" prop_get prop_set "}"
  130          | "{" prop_get "}"
  131          | "{" prop_set prop_get "}"
  132          | "{" prop_set "}"
  133          | ";"

  134 prop_get: "get" "(" IDENT ")" mthd_body
  135         | "get" mthd_body

  136 prop_set: "set" mthd_body

  137 ifelse: "if" "(" val ")" codestmnt
  138       | "if" "(" val ")" codestmnt "else" codestmnt

  139 for: "for" "(" for_step ")" codestmnt
  140    | "for" "(" for_each ")" codestmnt

  141 for_step: for_step_arg ";" for_step_arg ";" for_step_arg
  142         | for_step_arg ";" for_step_arg ";"
  143         | for_step_arg ";" ";" for_step_arg
  144         | for_step_arg ";" ";"
  145         | ";" for_step_arg ";" for_step_arg
  146         | ";" for_step_arg ";"
  147         | ";" ";" for_step_arg
  148         | ";" ";"

  149 for_step_arg: val
  150             | val ","
  151             | val "," for_step_arg

  152 for_each: declaration ":" val
  153         | declaration ":" val ".." val

  154 while: "while" "(" val ")" codestmnt
  155      | "do" codestmnt "while" "(" val ")"

  156 switch: "switch" "(" val ")" "{" switch_cases "}"

  157 switch_cases: switch_case
  158             | switch_cases switch_case

  159 switch_case: case ":"
  160            | case ":" codestmnt

  161 case: "case" cval
  162     | "default"

  163 try: "try" codestmnt

  164 catch: "catch" codestmnt
  165      | "catch" "(" declaration ")" codestmnt

  166 catchlist: catch
  167          | catch catchlist

  168 finally: "finally" codestmnt

  169 trycatch: try catchlist finally
  170         | try catchlist
  171         | try finally

  172 statement: "return"
  173          | "return" val
  174          | "throw"
  175          | "throw" val
  176          | "delete" val
  177          | "goto" IDENT
  178          | "goto" case

  179 declaration: type IDENT

  180 scope: "{" "}"
  181      | "{" codestmnt "}"

  182 val: exp01
  183    | assignment

  184 assignment: exp12 "=" val

  185 explist: val
  186        | val ","
  187        | explist "," val

  188 exp01: exp02
  189      | exp02 "?" exp01 ":" exp01

  190 exp02: exp03
  191      | exp02 "||" exp03

  192 exp03: exp04
  193      | exp03 "&&" exp04

  194 exp04: exp05
  195      | exp04 "==" exp05
  196      | exp04 "~=" exp05
  197      | exp04 "!=" exp05

  198 exp05: exp06
  199      | exp05 "<" exp06
  200      | exp05 "<=" exp06
  201      | exp05 ">" exp06
  202      | exp05 ">=" exp06

  203 exp06: exp07
  204      | exp06 "+" exp07
  205      | exp06 "-" exp07

  206 exp07: exp08
  207      | exp07 "*" exp08
  208      | exp07 "/" exp08
  209      | exp07 "%" exp08

  210 exp08: exp09
  211      | exp08 "<<" exp09
  212      | exp08 "<<<" exp09
  213      | exp08 ">>" exp09
  214      | exp08 ">>>" exp09

  215 exp09: exp10
  216      | exp09 "^" exp10
  217      | exp09 "|" exp10

  218 exp10: exp11
  219      | exp10 "&" exp11

  220 exp11: exp12
  221      | "!" exp11
  222      | "~" exp11
  223      | "(" val ")"

  224 exp12: expp
  225      | call
  226      | dotnav
  227      | arrget

  228 arrget: exp12 "[" val "]"

  229 dotnav: exp12 "." IDENT

  230 call: exp12 "(" explist ")"
  231     | exp12 "(" ")"

  232 expp: cval
  233     | "this"
  234     | "new" type
  235     | declaration

  236 cval: L_NUMBER
  237     | L_STRING
  238     | L_CHAR
  239     | "true"
  240     | "false"
  241     | type


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256) 34
"public" (258) 49
"local" (259) 50
"derived" (260) 47
"private" (261) 48
"unbound" (262) 79 91 128
"=" (263) 4 52 69 88 184
"&&" (264) 118 193
"&" (265) 117 219
"/" (266) 105 208
"*" (267) 104 207
"%" (268) 122 209
"||" (269) 120 191
"|" (270) 119 217
"^" (271) 121 216
"~" (272) 97 125 222
":" (273) 60 71 73 152 153 159 160 189
"::" (274) 38 40 41
"+" (275) 99 102 204
"++" (276) 100
"-" (277) 98 103 205
"--" (278) 101
"<=" (279) 111 200
"<" (280) 56 57 110 199
"<<" (281) 112 211
"<<<" (282) 113 212
">=" (283) 107 202
">" (284) 56 57 106 201
">>" (285) 108 213
">>>" (286) 109 214
"==" (287) 115 195
"~=" (288) 196
"!=" (289) 114 197
"!" (290) 96 221
"{" (291) 58 61 62 75 82 83 129 130 131 132 156 180 181
"}" (292) 58 61 62 75 82 83 129 130 131 132 156 180 181
"(" (293) 80 81 92 93 94 95 134 137 138 139 140 154 155 156 165 223
    230 231
")" (294) 80 81 92 93 94 95 134 137 138 139 140 154 155 156 165 223
    230 231
"[" (295) 228
"]" (296) 228
";" (297) 5 6 7 30 32 33 65 67 133 141 142 143 144 145 146 147 148
"," (298) 44 45 54 55 64 66 85 86 95 150 151 186 187
"." (299) 229
"?" (300) 189
"=>" (301)
"class" (302) 7 74
"get" (303) 134 135
"set" (304) 136
"namespace" (305) 5 58
"if" (306) 137 138
"for" (307) 139 140
"else" (308) 138
"while" (309) 154 155
"do" (310) 155
"switch" (311) 156
"case" (312) 161
"default" (313) 162
"return" (314) 172 173
"throw" (315) 174 175
"goto" (316) 177 178
"try" (317) 163
"catch" (318) 164 165
"finally" (319) 168
"operator" (320) 92 93 94 95
"using" (321) 5 6 7
"enum" (322) 6 59 60
".." (323) 116 153
"true" (324) 239
"false" (325) 240
"this" (326) 233
"new" (327) 234
"delete" (328) 176
IDENT (329) 4 37 38 51 52 68 69 74 78 79 87 88 124 125 127 128 134
    177 179 229
L_STRING (330) 237
L_NUMBER (331) 236
L_CHAR (332) 238


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (78)
    auf der linken Seite: 0
start (79)
    auf der linken Seite: 1 2, auf der rechten Seite: 0
using (80)
    auf der linken Seite: 3 4, auf der rechten Seite: 11 20 25
using_low (81)
    auf der linken Seite: 5 6 7, auf der rechten Seite: 3 4
filestmnt (82)
    auf der linken Seite: 8 9 10 11 12, auf der rechten Seite: 13 14
    58
filestmnts (83)
    auf der linken Seite: 13 14, auf der rechten Seite: 2 14
classstmnt (84)
    auf der linken Seite: 15 16 17 18 19 20 21, auf der rechten Seite:
    22 23
classstmnts (85)
    auf der linken Seite: 22 23, auf der rechten Seite: 23 75
codestmnt (86)
    auf der linken Seite: 24 25 26 27 28 29 30 31 32 33 34, auf der rechten Seite:
    35 36 137 138 139 140 154 155 160 163 164 165 168 181
codestmnts (87)
    auf der linken Seite: 35 36, auf der rechten Seite: 36 83
type_ident (88)
    auf der linken Seite: 37 38, auf der rechten Seite: 38 39 40 41
    42 58
type (89)
    auf der linken Seite: 39 40 41 42, auf der rechten Seite: 5 6 7
    43 44 45 51 52 60 78 79 87 88 91 127 128 179 234 241
typelist (90)
    auf der linken Seite: 43 44 45, auf der rechten Seite: 45 56 71
    73
encpsltn (91)
    auf der linken Seite: 46 47 48, auf der rechten Seite: 74 78 79
    91 124 127 128
encpsltn_n_cls (92)
    auf der linken Seite: 49 50, auf der rechten Seite: 46 59 60
template_def (93)
    auf der linken Seite: 51 52, auf der rechten Seite: 53 54 55
template_defs (94)
    auf der linken Seite: 53 54 55, auf der rechten Seite: 55 57
template_use (95)
    auf der linken Seite: 56, auf der rechten Seite: 39 41
template (96)
    auf der linken Seite: 57, auf der rechten Seite: 72 73 77 90
namespace (97)
    auf der linken Seite: 58, auf der rechten Seite: 9
enum (98)
    auf der linken Seite: 59 60, auf der rechten Seite: 12 21
enum_body (99)
    auf der linken Seite: 61 62, auf der rechten Seite: 59 60
enum_values (100)
    auf der linken Seite: 63 64 65 66 67, auf der rechten Seite: 62
    66 67
enum_value (101)
    auf der linken Seite: 68 69, auf der rechten Seite: 63 64 65 66
    67
class (102)
    auf der linken Seite: 70 71 72 73, auf der rechten Seite: 8 18
classhead (103)
    auf der linken Seite: 74, auf der rechten Seite: 70 71 72 73
classbody (104)
    auf der linken Seite: 75, auf der rechten Seite: 70 71 72 73
mthd (105)
    auf der linken Seite: 76 77, auf der rechten Seite: 10 15
mthd_head (106)
    auf der linken Seite: 78 79, auf der rechten Seite: 76 77
mthd_args (107)
    auf der linken Seite: 80 81, auf der rechten Seite: 76 77 123
mthd_body (108)
    auf der linken Seite: 82 83, auf der rechten Seite: 76 77 89 90
    123 134 135 136
mthd_arglist (109)
    auf der linken Seite: 84 85 86, auf der rechten Seite: 81 86
mthd_arg (110)
    auf der linken Seite: 87 88, auf der rechten Seite: 84 85 86 92
    93 94 95
mthdop (111)
    auf der linken Seite: 89 90, auf der rechten Seite: 16
mthdop_head (112)
    auf der linken Seite: 91, auf der rechten Seite: 89 90
mthdop_args (113)
    auf der linken Seite: 92 93 94 95, auf der rechten Seite: 89 90
mthdop_ops1p (114)
    auf der linken Seite: 96 97 98 99, auf der rechten Seite: 93
mthdop_ops1s (115)
    auf der linken Seite: 100 101, auf der rechten Seite: 92 94
mthdop_ops2 (116)
    auf der linken Seite: 102 103 104 105 106 107 108 109 110 111 112
    113 114 115 116 117 118 119 120 121 122, auf der rechten Seite:
    95
mthdcnst (117)
    auf der linken Seite: 123, auf der rechten Seite: 17
mthdcnst_head (118)
    auf der linken Seite: 124 125, auf der rechten Seite: 123
prop (119)
    auf der linken Seite: 126, auf der rechten Seite: 19
prop_head (120)
    auf der linken Seite: 127 128, auf der rechten Seite: 126
prop_body (121)
    auf der linken Seite: 129 130 131 132 133, auf der rechten Seite:
    126
prop_get (122)
    auf der linken Seite: 134 135, auf der rechten Seite: 129 130 131
prop_set (123)
    auf der linken Seite: 136, auf der rechten Seite: 129 131 132
ifelse (124)
    auf der linken Seite: 137 138, auf der rechten Seite: 24
for (125)
    auf der linken Seite: 139 140, auf der rechten Seite: 26
for_step (126)
    auf der linken Seite: 141 142 143 144 145 146 147 148, auf der rechten Seite:
    139
for_step_arg (127)
    auf der linken Seite: 149 150 151, auf der rechten Seite: 141 142
    143 144 145 146 147 151
for_each (128)
    auf der linken Seite: 152 153, auf der rechten Seite: 140
while (129)
    auf der linken Seite: 154 155, auf der rechten Seite: 28
switch (130)
    auf der linken Seite: 156, auf der rechten Seite: 29
switch_cases (131)
    auf der linken Seite: 157 158, auf der rechten Seite: 156 158
switch_case (132)
    auf der linken Seite: 159 160, auf der rechten Seite: 157 158
case (133)
    auf der linken Seite: 161 162, auf der rechten Seite: 159 160 178
try (134)
    auf der linken Seite: 163, auf der rechten Seite: 169 170 171
catch (135)
    auf der linken Seite: 164 165, auf der rechten Seite: 166 167
catchlist (136)
    auf der linken Seite: 166 167, auf der rechten Seite: 167 169 170
finally (137)
    auf der linken Seite: 168, auf der rechten Seite: 169 171
trycatch (138)
    auf der linken Seite: 169 170 171, auf der rechten Seite: 27
statement (139)
    auf der linken Seite: 172 173 174 175 176 177 178, auf der rechten Seite:
    30
declaration (140)
    auf der linken Seite: 179, auf der rechten Seite: 152 153 165 235
scope (141)
    auf der linken Seite: 180 181, auf der rechten Seite: 31
val (142)
    auf der linken Seite: 182 183, auf der rechten Seite: 32 137 138
    149 150 151 152 153 154 155 156 173 175 176 184 185 186 187 223
    228
assignment (143)
    auf der linken Seite: 184, auf der rechten Seite: 183
explist (144)
    auf der linken Seite: 185 186 187, auf der rechten Seite: 187 230
exp01 (145)
    auf der linken Seite: 188 189, auf der rechten Seite: 182 189
exp02 (146)
    auf der linken Seite: 190 191, auf der rechten Seite: 188 189 191
exp03 (147)
    auf der linken Seite: 192 193, auf der rechten Seite: 190 191 193
exp04 (148)
    auf der linken Seite: 194 195 196 197, auf der rechten Seite: 192
    193 195 196 197
exp05 (149)
    auf der linken Seite: 198 199 200 201 202, auf der rechten Seite:
    194 195 196 197 199 200 201 202
exp06 (150)
    auf der linken Seite: 203 204 205, auf der rechten Seite: 198 199
    200 201 202 204 205
exp07 (151)
    auf der linken Seite: 206 207 208 209, auf der rechten Seite: 203
    204 205 207 208 209
exp08 (152)
    auf der linken Seite: 210 211 212 213 214, auf der rechten Seite:
    206 207 208 209 211 212 213 214
exp09 (153)
    auf der linken Seite: 215 216 217, auf der rechten Seite: 210 211
    212 213 214 216 217
exp10 (154)
    auf der linken Seite: 218 219, auf der rechten Seite: 215 216 217
    219
exp11 (155)
    auf der linken Seite: 220 221 222 223, auf der rechten Seite: 218
    219 221 222
exp12 (156)
    auf der linken Seite: 224 225 226 227, auf der rechten Seite: 184
    220 228 229 230 231
arrget (157)
    auf der linken Seite: 228, auf der rechten Seite: 227
dotnav (158)
    auf der linken Seite: 229, auf der rechten Seite: 226
call (159)
    auf der linken Seite: 230 231, auf der rechten Seite: 225
expp (160)
    auf der linken Seite: 232 233 234 235, auf der rechten Seite: 224
cval (161)
    auf der linken Seite: 236 237 238 239 240 241, auf der rechten Seite:
    52 69 88 161 232


Zustand 0

    0 $accept: . start $end

    "public"     schiebe und gehe zu Zustand 1 über
    "local"      schiebe und gehe zu Zustand 2 über
    "derived"    schiebe und gehe zu Zustand 3 über
    "private"    schiebe und gehe zu Zustand 4 über
    "unbound"    schiebe und gehe zu Zustand 5 über
    "namespace"  schiebe und gehe zu Zustand 6 über
    "using"      schiebe und gehe zu Zustand 7 über

    $default  reduziere mit Regel 1 (start)

    start           gehe zu Zustand 8 über
    using           gehe zu Zustand 9 über
    using_low       gehe zu Zustand 10 über
    filestmnt       gehe zu Zustand 11 über
    filestmnts      gehe zu Zustand 12 über
    encpsltn        gehe zu Zustand 13 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    namespace       gehe zu Zustand 15 über
    enum            gehe zu Zustand 16 über
    class           gehe zu Zustand 17 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 19 über
    mthd_head       gehe zu Zustand 20 über


Zustand 1

   49 encpsltn_n_cls: "public" .

    $default  reduziere mit Regel 49 (encpsltn_n_cls)


Zustand 2

   50 encpsltn_n_cls: "local" .

    $default  reduziere mit Regel 50 (encpsltn_n_cls)


Zustand 3

   47 encpsltn: "derived" .

    $default  reduziere mit Regel 47 (encpsltn)


Zustand 4

   48 encpsltn: "private" .

    $default  reduziere mit Regel 48 (encpsltn)


Zustand 5

   79 mthd_head: "unbound" . encpsltn type IDENT

    "public"   schiebe und gehe zu Zustand 1 über
    "local"    schiebe und gehe zu Zustand 2 über
    "derived"  schiebe und gehe zu Zustand 3 über
    "private"  schiebe und gehe zu Zustand 4 über

    encpsltn        gehe zu Zustand 21 über
    encpsltn_n_cls  gehe zu Zustand 22 über


Zustand 6

   58 namespace: "namespace" . type_ident "{" filestmnt "}"

    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 24 über


Zustand 7

    5 using_low: "using" . "namespace" type ";"
    6          | "using" . "enum" type ";"
    7          | "using" . "class" type ";"

    "class"      schiebe und gehe zu Zustand 25 über
    "namespace"  schiebe und gehe zu Zustand 26 über
    "enum"       schiebe und gehe zu Zustand 27 über


Zustand 8

    0 $accept: start . $end

    $end  schiebe und gehe zu Zustand 28 über


Zustand 9

   11 filestmnt: using .

    $default  reduziere mit Regel 11 (filestmnt)


Zustand 10

    3 using: using_low .
    4      | using_low . "=" IDENT

    "="  schiebe und gehe zu Zustand 29 über

    $default  reduziere mit Regel 3 (using)


Zustand 11

   13 filestmnts: filestmnt .

    $default  reduziere mit Regel 13 (filestmnts)


Zustand 12

    2 start: filestmnts .
   14 filestmnts: filestmnts . filestmnt

    "public"     schiebe und gehe zu Zustand 1 über
    "local"      schiebe und gehe zu Zustand 2 über
    "derived"    schiebe und gehe zu Zustand 3 über
    "private"    schiebe und gehe zu Zustand 4 über
    "unbound"    schiebe und gehe zu Zustand 5 über
    "namespace"  schiebe und gehe zu Zustand 6 über
    "using"      schiebe und gehe zu Zustand 7 über

    $default  reduziere mit Regel 2 (start)

    using           gehe zu Zustand 9 über
    using_low       gehe zu Zustand 10 über
    filestmnt       gehe zu Zustand 30 über
    encpsltn        gehe zu Zustand 13 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    namespace       gehe zu Zustand 15 über
    enum            gehe zu Zustand 16 über
    class           gehe zu Zustand 17 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 19 über
    mthd_head       gehe zu Zustand 20 über


Zustand 13

   74 classhead: encpsltn . "class" IDENT
   78 mthd_head: encpsltn . type IDENT

    "::"     schiebe und gehe zu Zustand 31 über
    "class"  schiebe und gehe zu Zustand 32 über
    IDENT    schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 34 über


Zustand 14

   46 encpsltn: encpsltn_n_cls .
   59 enum: encpsltn_n_cls . "enum" enum_body
   60     | encpsltn_n_cls . "enum" ":" type enum_body

    "enum"  schiebe und gehe zu Zustand 35 über

    $default  reduziere mit Regel 46 (encpsltn)


Zustand 15

    9 filestmnt: namespace .

    $default  reduziere mit Regel 9 (filestmnt)


Zustand 16

   12 filestmnt: enum .

    $default  reduziere mit Regel 12 (filestmnt)


Zustand 17

    8 filestmnt: class .

    $default  reduziere mit Regel 8 (filestmnt)


Zustand 18

   70 class: classhead . classbody
   71      | classhead . ":" typelist classbody
   72      | classhead . template classbody
   73      | classhead . template ":" typelist classbody

    ":"  schiebe und gehe zu Zustand 36 über
    "<"  schiebe und gehe zu Zustand 37 über
    "{"  schiebe und gehe zu Zustand 38 über

    template   gehe zu Zustand 39 über
    classbody  gehe zu Zustand 40 über


Zustand 19

   10 filestmnt: mthd .

    $default  reduziere mit Regel 10 (filestmnt)


Zustand 20

   76 mthd: mthd_head . mthd_args mthd_body
   77     | mthd_head . template mthd_args mthd_body

    "<"  schiebe und gehe zu Zustand 37 über
    "("  schiebe und gehe zu Zustand 41 über

    template   gehe zu Zustand 42 über
    mthd_args  gehe zu Zustand 43 über


Zustand 21

   79 mthd_head: "unbound" encpsltn . type IDENT

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 44 über


Zustand 22

   46 encpsltn: encpsltn_n_cls .

    $default  reduziere mit Regel 46 (encpsltn)


Zustand 23

   37 type_ident: IDENT .

    $default  reduziere mit Regel 37 (type_ident)


Zustand 24

   38 type_ident: type_ident . "::" IDENT
   58 namespace: "namespace" type_ident . "{" filestmnt "}"

    "::"  schiebe und gehe zu Zustand 45 über
    "{"   schiebe und gehe zu Zustand 46 über


Zustand 25

    7 using_low: "using" "class" . type ";"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 47 über


Zustand 26

    5 using_low: "using" "namespace" . type ";"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 48 über


Zustand 27

    6 using_low: "using" "enum" . type ";"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 49 über


Zustand 28

    0 $accept: start $end .

    $default  annehmen


Zustand 29

    4 using: using_low "=" . IDENT

    IDENT  schiebe und gehe zu Zustand 50 über


Zustand 30

   14 filestmnts: filestmnts filestmnt .

    $default  reduziere mit Regel 14 (filestmnts)


Zustand 31

   40 type: "::" . type_ident
   41     | "::" . type_ident template_use

    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 51 über


Zustand 32

   74 classhead: encpsltn "class" . IDENT

    IDENT  schiebe und gehe zu Zustand 52 über


Zustand 33

   38 type_ident: type_ident . "::" IDENT
   39 type: type_ident . template_use
   42     | type_ident .

    "::"  schiebe und gehe zu Zustand 45 über
    "<"   schiebe und gehe zu Zustand 53 über

    "<"       [reduziere mit Regel 42 (type)]
    $default  reduziere mit Regel 42 (type)

    template_use  gehe zu Zustand 54 über


Zustand 34

   78 mthd_head: encpsltn type . IDENT

    IDENT  schiebe und gehe zu Zustand 55 über


Zustand 35

   59 enum: encpsltn_n_cls "enum" . enum_body
   60     | encpsltn_n_cls "enum" . ":" type enum_body

    ":"  schiebe und gehe zu Zustand 56 über
    "{"  schiebe und gehe zu Zustand 57 über

    enum_body  gehe zu Zustand 58 über


Zustand 36

   71 class: classhead ":" . typelist classbody

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 59 über
    typelist    gehe zu Zustand 60 über


Zustand 37

   57 template: "<" . template_defs ">"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident     gehe zu Zustand 33 über
    type           gehe zu Zustand 61 über
    template_def   gehe zu Zustand 62 über
    template_defs  gehe zu Zustand 63 über


Zustand 38

   75 classbody: "{" . classstmnts "}"

    "public"   schiebe und gehe zu Zustand 1 über
    "local"    schiebe und gehe zu Zustand 2 über
    "derived"  schiebe und gehe zu Zustand 3 über
    "private"  schiebe und gehe zu Zustand 4 über
    "unbound"  schiebe und gehe zu Zustand 64 über
    "~"        schiebe und gehe zu Zustand 65 über
    "using"    schiebe und gehe zu Zustand 7 über

    using           gehe zu Zustand 66 über
    using_low       gehe zu Zustand 10 über
    classstmnt      gehe zu Zustand 67 über
    classstmnts     gehe zu Zustand 68 über
    encpsltn        gehe zu Zustand 69 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    enum            gehe zu Zustand 70 über
    class           gehe zu Zustand 71 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 72 über
    mthd_head       gehe zu Zustand 20 über
    mthdop          gehe zu Zustand 73 über
    mthdop_head     gehe zu Zustand 74 über
    mthdcnst        gehe zu Zustand 75 über
    mthdcnst_head   gehe zu Zustand 76 über
    prop            gehe zu Zustand 77 über
    prop_head       gehe zu Zustand 78 über


Zustand 39

   72 class: classhead template . classbody
   73      | classhead template . ":" typelist classbody

    ":"  schiebe und gehe zu Zustand 79 über
    "{"  schiebe und gehe zu Zustand 38 über

    classbody  gehe zu Zustand 80 über


Zustand 40

   70 class: classhead classbody .

    $default  reduziere mit Regel 70 (class)


Zustand 41

   80 mthd_args: "(" . ")"
   81          | "(" . mthd_arglist ")"

    "::"   schiebe und gehe zu Zustand 31 über
    ")"    schiebe und gehe zu Zustand 81 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident    gehe zu Zustand 33 über
    type          gehe zu Zustand 82 über
    mthd_arglist  gehe zu Zustand 83 über
    mthd_arg      gehe zu Zustand 84 über


Zustand 42

   77 mthd: mthd_head template . mthd_args mthd_body

    "("  schiebe und gehe zu Zustand 41 über

    mthd_args  gehe zu Zustand 85 über


Zustand 43

   76 mthd: mthd_head mthd_args . mthd_body

    "{"  schiebe und gehe zu Zustand 86 über

    mthd_body  gehe zu Zustand 87 über


Zustand 44

   79 mthd_head: "unbound" encpsltn type . IDENT

    IDENT  schiebe und gehe zu Zustand 88 über


Zustand 45

   38 type_ident: type_ident "::" . IDENT

    IDENT  schiebe und gehe zu Zustand 89 über


Zustand 46

   58 namespace: "namespace" type_ident "{" . filestmnt "}"

    "public"     schiebe und gehe zu Zustand 1 über
    "local"      schiebe und gehe zu Zustand 2 über
    "derived"    schiebe und gehe zu Zustand 3 über
    "private"    schiebe und gehe zu Zustand 4 über
    "unbound"    schiebe und gehe zu Zustand 5 über
    "namespace"  schiebe und gehe zu Zustand 6 über
    "using"      schiebe und gehe zu Zustand 7 über

    using           gehe zu Zustand 9 über
    using_low       gehe zu Zustand 10 über
    filestmnt       gehe zu Zustand 90 über
    encpsltn        gehe zu Zustand 13 über
    encpsltn_n_cls  gehe zu Zustand 14 über
    namespace       gehe zu Zustand 15 über
    enum            gehe zu Zustand 16 über
    class           gehe zu Zustand 17 über
    classhead       gehe zu Zustand 18 über
    mthd            gehe zu Zustand 19 über
    mthd_head       gehe zu Zustand 20 über


Zustand 47

    7 using_low: "using" "class" type . ";"

    ";"  schiebe und gehe zu Zustand 91 über


Zustand 48

    5 using_low: "using" "namespace" type . ";"

    ";"  schiebe und gehe zu Zustand 92 über


Zustand 49

    6 using_low: "using" "enum" type . ";"

    ";"  schiebe und gehe zu Zustand 93 über


Zustand 50

    4 using: using_low "=" IDENT .

    $default  reduziere mit Regel 4 (using)


Zustand 51

   38 type_ident: type_ident . "::" IDENT
   40 type: "::" type_ident .
   41     | "::" type_ident . template_use

    "::"  schiebe und gehe zu Zustand 45 über
    "<"   schiebe und gehe zu Zustand 53 über

    "<"       [reduziere mit Regel 40 (type)]
    $default  reduziere mit Regel 40 (type)

    template_use  gehe zu Zustand 94 über


Zustand 52

   74 classhead: encpsltn "class" IDENT .

    $default  reduziere mit Regel 74 (classhead)


Zustand 53

   56 template_use: "<" . typelist ">"

    "::"   schiebe und gehe zu Zustand 31 über
    IDENT  schiebe und gehe zu Zustand 23 über

    type_ident  gehe zu Zustand 33 über
    type        gehe zu Zustand 59 über
    typelist    gehe zu Zustand 95 über


Zustand 54

   39 type: type_ident template_use .

    $default  reduziere mit Regel 39 (type)


Zustand 55

   78 mthd_head: encpsltn type IDENT .

    $default  reduziere mit Regel 78 (mthd_head)


Zustand 56
